# Anyaproject

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
src/private/: MainWindow.cpp
src/private/Buttons/: AddButton.cpp  MainButton.cpp
src/private/Content/: Content.cpp  ContentHeaderWidget.cpp
src/private/Database/: Database.cpp
src/private/Invoice/: InvoiceWidget.cpp
src/private/Sidebar/: Sidebar.cpp
src/public/: Invoice.h  MainWindow.h
src/public/Buttons/: AddButton.h  MainButton.h
src/public/Content/: Content.h  ContentHeaderWidget.h
src/public/Database/: Database.h
src/public/Invoice/: InvoiceWidget.h
src/public/Sidebar/: Sidebar.h
